# signate_cup_2024

./: .gitignore  00_autogluon.ipynb  README.md  pyproject.toml  submission_20240811.csv
src/: 00_autogluon.ipynb  01_preprocess.ipynb  02_neural_net.ipynb  02_toy_neural_net.ipynb  03_tabnet.ipynb  04_prodpitched_pred.ipynb  05_EDA.ipynb  06_XGBoost.ipynb  99_neural_net_preprocess_template.ipynb  best_model.pth  cross_val.py  neural_network_model.py  preprocess_for_all_models.py  preprocess_for_nn.py  tutorial.ipynb  word2vec_for_categorical_col.py
