[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Daku-on <113434878+Daku-on@users.noreply.github.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "<2.0.0"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.1"
japanize-matplotlib = "^1.1.3"
polars = "^1.3.0"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
